--- a/policy/SuperBITMapper.yaml
+++ b/policy/SuperBITMapper.yaml
@@ -1,7 +1,7 @@
 needCalibRegistry: true
 
-camera: ../hsc/camera
-defects: ../hsc/defects
+camera: ../superBIT/camera
+defects: ../superBIT/defects
 
 skytiles:
   resolutionPix: 700
